# neopixel-desptop

./: .gitignore  README.md
src/: CMakeLists.txt  color.h  lwipopts.h  main.c  makefile  pwm.pio.h  server.c  server.h  website.h  wifiopts.h  wifiopts_template.h  ws2812b.c  ws2812b.h  ws2812opts.h
src/pio/: pwm.pio  pwm.pio.h
